# ecs

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build.bat  test.bat  vcpkg.json
bench/: bench.cpp
examples/: gameplay.cpp
include/: quiver.cppm  quiver.hpp
src/: ecs.hpp
tests/: .clang-format  module_smoke.cpp  test_harness.hpp  tests.cpp  tests_bonds.cpp  tests_meta.cpp  tests_queries.cpp  tests_reactive.cpp  tests_scheduler.cpp  tests_traits.cpp  tests_world.cpp
